# vip-amp-perception

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
fall/: cones.ipynb  crop_image.ipynb  random_spawning.ipynb
